<?xml version="1.0" encoding="utf-8"?>
<!--
**** ColourMemory MainActivity Layout File - Portrait Mode
**** @author rahulthakur
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg"
	android:gravity="center_horizontal"
	tools:context="thakur.rahul.colourmemory.MainActivity" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:gravity="center_horizontal"
		android:orientation="vertical" >

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="@dimen/hku_logo_dimen"
			android:layout_marginTop="@dimen/medium_gap"
			android:adjustViewBounds="true"
			android:contentDescription="@string/app_name"
			android:scaleType="fitCenter"
			android:src="@drawable/hku_logo" />

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="@dimen/logo_dimen"
			android:layout_marginTop="@dimen/medium_gap"
			android:adjustViewBounds="true"
			android:contentDescription="@string/app_name"
			android:scaleType="fitCenter"
			android:src="@drawable/logo" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_margin="@dimen/medium_gap"
		android:baselineAligned="false"
		android:orientation="horizontal" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginRight="@dimen/small_gap"
			android:layout_weight="0.5"
			android:gravity="center_vertical"
			android:orientation="vertical" >

			<Button
				android:id="@+id/startButton"
				style="@style/buttonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/magenta_button"
				android:onClick="startGame"
				android:text="@string/start_button" />

			<Button
				android:id="@+id/themeShopButton"
				style="@style/buttonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/small_gap"
				android:background="@drawable/blue_button"
				android:onClick="openThemeShop"
				android:text="@string/theme_shop_button" />

			<Button
				android:id="@+id/scoresButton"
				style="@style/buttonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/small_gap"
				android:background="@drawable/green_button"
				android:onClick="showScores"
				android:text="@string/scores_button" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginLeft="@dimen/small_gap"
			android:layout_weight="0.5"
			android:gravity="center_vertical"
			android:orientation="vertical" >

			<Button
				android:id="@+id/timeTrialButton"
				style="@style/buttonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/yellow_button"
				android:onClick="startTimeTrial"
				android:text="@string/time_trial_button" />

			<Button
				android:id="@+id/resetButton"
				style="@style/buttonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/small_gap"
				android:background="@drawable/black_button"
				android:onClick="resetThemes"
				android:text="@string/reset_button" />

			<Button
				android:id="@+id/exitButton"
				style="@style/buttonStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/small_gap"
				android:background="@drawable/red_button"
				android:onClick="closeApplication"
				android:text="@string/exit_button" />
		</LinearLayout>
	</LinearLayout>

	<FrameLayout
		android:id="@+id/fragment_container_high_score_list_main"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

</RelativeLayout>