<?xml version="1.0" encoding="utf-8"?>
<!--
**** GameBoardActivity Layout File
**** @author rahulthakur
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg2" >

	<LinearLayout
		android:id="@+id/headerLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_margin="@dimen/small_gap"
		android:orientation="horizontal"
		android:weightSum="12" >

		<ImageView
			android:id="@+id/logo"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="4"
			android:adjustViewBounds="true"
			android:contentDescription="@string/app_name"
			android:scaleType="fitCenter"
			android:src="@drawable/logo" />

		<Button
			android:id="@+id/currentScoreButton"
			style="@style/buttonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="@drawable/green_button"
			android:clickable="false"
			android:text="@string/current_score" />

		<Button
			android:id="@+id/timerButton"
			style="@style/buttonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="@drawable/red_button"
			android:clickable="false"
			android:text="@string/time_left" />

		<Button
			android:id="@+id/scoresButton"
			style="@style/buttonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="4"
			android:background="@drawable/cyan_button"
			android:onClick="showScores"
			android:text="@string/scores_button" />
	</LinearLayout>

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/headerLayout"
		android:layout_margin="@dimen/small_gap" >

		<include
			android:id="@+id/grid0"
			layout="@layout/include_grid_0" />

		<include
			android:id="@+id/grid1"
			layout="@layout/include_grid_1" />
	</FrameLayout>

	<FrameLayout
		android:id="@+id/fragment_container_high_score_list_gameboard"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<FrameLayout
		android:id="@+id/fragment_container_new_high_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true" />

</RelativeLayout>